        * gas/mips/empic.s: Likewise.
        * gas/mips/mips16-e.d: Likewise.
        * gas/mips/mips16-e.s: Likewise.
        * gas/mips/mips16-f.d: Likewise.
        * gas/mips/mips16-f.s: Likewise.

        * gas/mips/mips32.d: Expect disassembly of madd and maddu
        to use their correct names.  Add tests for break and sdbbp.
        * gas/mips/mips32.s: Likewise.

2000-12-01  Chris Demetriou  <cgd@sibyte.com>

        * gas/mips/mips16.d: Expect mips16 nops to be used for padding
        when mips16 code generation is enabled.

	* gas/mips/empic.d: Adjust for the fact that the difference
	between two symbols in the same section are not expected to
	generate a reloc.
	* gas/mips/empic.s: Likewise.  Also, correct typo in comment
	about expected relocs.
	
        * gas/mips/mips32.s, gas/mips/mips32.d: New files for MIPS32
        instruction assembly test.
        * gas/mips/mips.exp: Add the test mentioned above.

2000-11-30  Diego Novillo  <dnovillo@redhat.com>

	* intel.s, intel.d: New test for @GOT references.

2000-11-28  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/sh/err.exp: New, framework for error-testing.
	* gas/sh/err-1.s: New test.

2000-11-26  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* gas/m68hc11/opers12.s: New test for movw operands.
	* gas/m68hc11/opers12.d: Likewise.

2000-11-24  Nick Clifton  <nickc@redhat.com>

	* arm.exp: Run tests for xscale as well as arm.
	Run xscale tests.

	* xscale.s: New file: XScale instruction tests.
	* xscale.d: New file: Expected XScale instruction results.

2000-11-20  H.J. Lu  <hjl@gnu.org>

	* gas/i386/intel.d: Add 3 "nop"s for the a.out assembler.
	* gas/i386/intel.s: Likewise.

2000-11-16  H.J. Lu  <hjl@gnu.org>

	* gas/symver/symver0.d: Add 64bit support.
	* gas/symver/symver1.d: Likewise.

2000-11-16  H.J. Lu  <hjl@gnu.org>

	* gas/symver/symver.exp: Don't run symver4 nor symver5.

2000-11-13  H.J. Lu  <hjl@gnu.org>

	* gas/symver/symver.exp: New for symver test.